--- a/view/index.ejs
+++ b/view/index.ejs
@@ -1,18 +1,64 @@
 <%- include('./partials/head') %>
 
 <main>
+  <header>
+    <h1>UltiTV Commentary Source</h1>
+  </header>
+  <section class="card-container">
+    <!-- Game Info -->
+    <section class="cardGameInfo">
+      <div class="card-inner">
+        <h3>Game Info</h3>
+      </div>
+    </section>
 
-    <h2>Score</h2>
+  
+    <!-- Config tab -->
+    <section class="cardConfig">
+      <div class="card-inner">
+        <h3>Config</h3>
+      </div>
+    </section>
 
+    <!-- Score -->
+    <section class="cardScore">
+      <div class="card-inner">
+        <h3>Score</h3>
+      </div>
+    </section>
 
- <h3><%= team1Name %></h3>
- <% team1Players.forEach(team1Player => { %>
-  <article>
-    <%= team1Player.name %> - <%= team1Player.jerseyNumber %>
-</article>
- <% }) %>
+    <!-- Team 1 -->
+    <section class="cardTeam">
+      <div class="card-inner">
+        <h3><%= team1Name %></h3>
+      </div>
+      <% team1Players.forEach(team1Player => { %>
+        <div class="teamPlayer"> <%= team1Player.name %></div>
+      <% }) %>
+    </section>
 
+    <!-- Team 2 -->
+    <section class="cardTeam">
+      <div class="card-inner">
+        <h3><%= team2Name %></h3>
+      </div>
+      <div class="teamPlayer-container">
+      <% team2Players.forEach(team2Player => { %>
+        
+        <div class="teamPlayer-card"> 
+          <div class="jerseyNumber"><%= team2Player.jerseyNumber %></div>
+          <div class="playerName"><%= team2Player.name %></div>
+          <div class="gameStats">
+            <p class="goal"></p>
+            <p class="assist"></p>
+            <p class="block"></p>
+            <p class="turnover"></p>
+          </div>
+        </div>
+      <% }) %>
+    </div>
+    </section>
+  </section>
 </main>
-
 
 <%- include('./partials/foot') %>
