--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,36 +1,34 @@
 :root {
-	--white-color: #fff
+  --white-color: #fff;
+  --card-color: #cccccc;
 }
 
 * {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-
 
 header {
-	display: flex;
-	height: 7em;
-	width: 100%;
-	background-color: #30343f;
-	margin-bottom: 2.5em;
+  display: flex;
+  height: 7em;
+  width: 100%;
+  background-color: #30343f;
+  margin-bottom: 2.5em;
 }
 
-header h1 { 
-	color: var(--white-color);
-	text-align: center;
+header h1 {
+  color: var(--white-color);
+  text-align: center;
 }
 
 .card-container {
-	padding: 1em;
+  padding: 1em;
   margin: 0 auto;
-  padding: 0;
   list-style: none;
   user-select: none;
   display: grid;
   grid-gap: 1.5em;
-  /* grid-template-columns: repeat(autofill, minmax(12.5em, 1fr)); */
   grid-template-columns: repeat(auto-fit, minmax(12.5em, 1fr));
   grid-template-rows: repeat(6, 1fr);
   grid-auto-flow: row dense;
@@ -39,112 +37,105 @@ header h1 {
 
 .card-container > section {
   border-radius: 1em;
-  cursor: move;
+  /* cursor: move; */
 }
 
 .card-inner {
   /* background-color: #fff; */
   padding: 0 1em;
-	color: var(--white-color);
-	font-weight: bold
+  color: var(--white-color);
+  font-weight: bold;
 }
 
 /* Cards */
 .cardGameInfo {
   background-color: #ff0000;
-  grid-area: span 1 / span 2;
+  grid-area: span 2 / span 2;
 }
 
 .cardScore {
   background-color: #00ff00;
   grid-area: span 4 / span 2;
-	min-height: auto;
+  min-height: auto;
 }
 
 .cardConfig {
   background-color: #0000ff;
-	grid-area: span 2 / span 1;
+  grid-area: span 2 / span 1;
 }
 
 .cardTeam {
-	display: flex;
-	flex-direction: column;
+  display: flex;
+  flex-direction: column;
   background-color: wheat;
-	grid-area: span 2 / span 3;
+  grid-area: span 2 / span 3;
 }
 
+/* Player cards */
 .teamPlayer-container {
-	display: grid;
-	grid-template-columns: repeat(auto-fill,minmax(10em, 1fr));
-	padding: 0.5em;
-		/* display: flex;
-		flex-flow: row wrap;
-		justify-content: center; */
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(10em, 1fr));
+  padding: 0.5em;
 }
 
 .teamPlayer-card {
-	display: flex;
-	flex-direction: row;
-	height: 3.5em;
-	border: 3px solid black;
-	margin: 0.5em;
-	width: 10em;
-
+  display: flex;
+  flex-direction: row;
+  height: 3.5em;
+  border: 3px solid black;
+  margin: 0.5em;
+  width: 10em;
 }
 
 .jerseyNumber {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	width: 2em;
-	height: 100%;
-	font-size: 1.5em;
-	font-weight: bold; 
-	border-right: 3px solid black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 2em;
+  height: 100%;
+  font-size: 1.5em;
+  font-weight: bold;
+  border-right: 3px solid black;
 }
 
 .namestat-wrapper {
-	width: 100%;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-around;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 }
 
 .playerName {
-	width: 100%;
-	display: flex;
-	justify-content: center;
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
 
-.gameStats{
-	/* padding: ; */
-	/* margin-bottom: 0.4em; */
-	width: 100%;
-	margin: 0 auto 0.2em auto;
-	display: flex;
-	justify-content: space-around;
- }
+.gameStats {
+  width: 100%;
+  margin: 0 auto 0.2em auto;
+  display: flex;
+  justify-content: space-around;
+}
 
 /* Gamestats */
 .goal {
-	padding: 0.20em 0.35em;
-	background-color: #40fc40;
-	border-radius: 0.3em;
+  padding: 0.2em 0.35em;
+  background-color: #40fc40;
+  border-radius: 0.3em;
 }
 .assist {
-	padding: 0.20em 0.35em;
-	background-color: #3f71fc;
-	border-radius: 0.3em;
+  padding: 0.2em 0.35em;
+  background-color: #3f71fc;
+  border-radius: 0.3em;
 }
-.block { 
-	padding: 0.20em 0.35em;
-	background-color: #f14545;
-	border-radius: 0.3em;
+.block {
+  padding: 0.2em 0.35em;
+  background-color: #f14545;
+  border-radius: 0.3em;
 }
 .turnover {
-	padding: 0.20em 0.35em;
-	background-color: #f7d643;
-	border-radius: 0.3em;
+  padding: 0.2em 0.35em;
+  background-color: #f7d643;
+  border-radius: 0.3em;
 }
-
-
