--- a/view/index.ejs
+++ b/view/index.ejs
@@ -1,10 +1,8 @@
 <%- include('./partials/head') %>
-
+<header>
+  <h1>UltiTV Commentary Source</h1>
+</header>
 <main>
-  <header>
-    <h1>UltiTV Commentary Source</h1>
-  </header>
-  <div class="card-container">
     <!-- Game Info -->
     <section class="cardGameInfo">
       <div class="card-inner">
@@ -35,7 +33,7 @@
     </section>
 
     <!-- Team 1 -->
-    <section class="cardTeam">
+    <section class="cardteam1">
       <div class="card-inner">
         <h3><%= parsedGameData.team1Name %></h3>
       </div>
@@ -79,7 +77,7 @@
     </section>
 
     <!-- Team 2 -->
-    <section class="cardTeam">
+    <section class="cardteam2">
       <div class="card-inner">
         <h3><%= parsedGameData.team2Name %></h3>
       </div>
@@ -121,7 +119,6 @@
         <% }) %>
       </div>
     </section>
-</div>
 </main>
 
 <%- include('./partials/foot') %>
