--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22,15 +22,15 @@ header h1 {
   text-align: center;
 }
 
-.card-container {
-  padding: 1em;
+main {
+  /* padding: 1em; */
   margin: 0 auto;
   list-style: none;
   user-select: none;
   display: grid;
   grid-gap: 1.5em;
-  grid-template-columns: repeat(auto-fit, minmax(12.5em, 1fr));
-  grid-template-rows: repeat(6, 1fr);
+  /* grid-template-columns: repeat(auto-fit, minmax(12.5em, 1fr)); */
+  /* grid-template-rows: repeat(6, 1fr); */
   grid-auto-flow: row dense;
   min-height: 100vh;
 }
@@ -144,7 +144,6 @@ section {
   border-radius: 0.3em;
 }
 
-
 @media (min-width: 48rem) {
   main {
     display: grid;
@@ -171,7 +170,7 @@ section {
     grid-area: Scoreboard;
   }
 
-  .cardConfig {
+  .cardconfig {
     background-color: var(--card-color);
     grid-area: Config
   }
@@ -188,6 +187,11 @@ section {
     flex-direction: column;
     background-color: wheat;
     grid-area: cardteam2;
+  }
+
+  /* Card selector block */
+  .cardconfig {
+
   }
 
 
