Fixed CSS reset & custom properties

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,10 @@
 :root {
   --white-color: #fff;
-  --card-color: #F9f4EA;
+  --card-background: #F9f4EA;
+  
+  --body-background: #3A3C63;
+
+  --block-border-radius: .5em;
 }
 
 * {
@@ -8,6 +12,19 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+ul {
+  list-style-type: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
 
 header {
   display: flex;
@@ -22,45 +39,40 @@ header h1 {
   text-align: center;
 }
 
+body {
+  font: 100%/1.4 "Open Sans", sans-serif;
+  background-color: var(--body-background);
+  padding: 1em;
+}
+
 main {
-  /* padding: 1em; */
-  margin: 0 auto;
-  list-style: none;
-  user-select: none;
-  display: grid;
-  grid-gap: 1.5em;
-  /* grid-template-columns: repeat(auto-fit, minmax(12.5em, 1fr)); */
-  /* grid-template-rows: repeat(6, 1fr); */
-  grid-auto-flow: row dense;
-  min-height: 100vh;
+  display: flex;
 }
 
 section {
-  border-radius: 1em;
-  /* cursor: move; */
+  border-radius: var(--block-border-radius);
+
 }
 
 .card-inner {
-  /* background-color: #fff; */
   padding: 0 1em;
-  /* color: var(--white-color); */
   font-weight: bold;
 }
 
 /* Cards */
 .cardGameInfo {
-  background-color: var(--card-color);
+  background-color: var(--card-background);
   grid-area: span 2 / span 2;
 }
 
 .cardScore {
-  background-color: var(--card-color);
+  background-color: var(--card-background);
   grid-area: span 4 / span 2;
   min-height: auto;
 }
 
 .cardConfig {
-  background-color: var(--card-color);
+  background-color: var(--card-background);
   grid-area: span 2 / span 1;
   height: 10em;
 }
@@ -161,31 +173,31 @@ section {
 
   /* Cards */
   .cardGameInfo {
-    background-color: var(--card-color);
+    background-color: var(--card-background);
     grid-area: Game-info;
   }
 
   .cardScore {
-    background-color: var(--card-color);
+    background-color: var(--card-background);
     grid-area: Scoreboard;
   }
 
   .cardconfig {
-    background-color: var(--card-color);
+    background-color: var(--card-background);
     grid-area: Config
   }
 
   .cardteam1 {
     display: flex;
     flex-direction: column;
-    background-color: wheat;
+    background-color: var(--card-background);
     grid-area: cardteam1;
   }
 
   .cardteam2 {
     display: flex;
     flex-direction: column;
-    background-color: wheat;
+    background-color: var(--card-background);
     grid-area: cardteam2;
   }
 
