--- a/view/partials/head.ejs
+++ b/view/partials/head.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Overzicht FDND'ers</title>
+    <title>Ulti TV Commentary View</title>
     <link rel="stylesheet" href="/css/style.css">
     <script src="/scripts/script.js" defer></script>
   </head>
